crates/biome_yaml_formatter/tests/specs/prettier/yaml/spec/spec-example-9-4-explicit-documents.yml.snap
---
source: crates/biome_formatter_test/src/snapshot_builder.rs
info: yaml/spec/spec-example-9-4-explicit-documents.yml
---

# Input

```yml
---
{ matches
% : 20 }
...
---
# Empty
...

```


# Error
```text
reformat: formatter output had syntax errors where input had none:
spec-example-9-4-explicit-documents.yml:4:4 parse ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Unexpected token.
  
    2 │ { matches
    3 │ % : 20 }
  > 4 │ ...---
      │    ^^^
  > 5 │ # Empty # Empty
  > 6 │ ...
      │ ^^^
    7 │ 
  

```
